@@ -115,3 +115,4 @@
 - Spinolyps only drain prayer if they hit, and always target ranged defence (plus null reference fix) - aweinstock
 - Increase drop rate of Sinister Key to 1/12 - aweinstock
 - Strike spells now always max on Salarin, convert Yanille Agility Dungeon to kotlin + listener - aweinstock
+- Refactor NPCDropTable, WeightBasedTable and fixed bug where special items weren't processed in some cases - ryannathans
